# bookslef-soroban

./: README.md
contracts/notes/: Cargo.toml
contracts/notes/src/: lib.rs
